Widen the clickable area for the Heat Zone button on the Dashboard

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -33,9 +33,11 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="card">
-                        <div class="card-header btn" style="width:100%">
-                            <a href="#/heat-zone/"><h2>Heat Zone</h2></a>
-                        </div>
+                        <a href="#/heat-zone/">
+                            <div class="card-header btn" style="width:100%">
+                                <h2>Heat Zone</h2>
+                            </div>
+                        </a>
                     </div>
                     <div class="card">
                         <div class="card-header">
