--- a/public/template/sidebar-left.html
+++ b/public/template/sidebar-left.html
@@ -7,7 +7,7 @@
         <li data-ng-class="{ 'active toggled': mactrl.$state.includes('players') }">
             <a data-ui-sref="players.list" data-ng-click="mactrl.sidebarStat($event)"><i class="zmdi zmdi-view-list"></i> Players</a>
         </li>
-        <li><a data-ui-sref-active="active" href="#/heat-zone/"><i class="zmdi zmdi-fire"></i> Heat Zone</a></li>
+        <li data-ng-class="{ 'active toggled': mactrl.$state.includes('heat-zone') }"><a data-ui-sref-active="active" href="#/heat-zone/"><i class="zmdi zmdi-fire"></i> Heat Zone</a></li>
         <li class="sub-menu" data-ng-class="{ 'active toggled': mactrl.$state.includes('reports') }">
             <a href="" toggle-submenu><i class="zmdi zmdi-collection-text"></i> Reports</a>
 
