--- a/public/views/reports-batter-heat-zone.html
+++ b/public/views/reports-batter-heat-zone.html
@@ -205,6 +205,7 @@
                                     <th>Pitch Type</th>
                                     <th>PA</th>
                                     <th>AB</th>
+                                    <th>K</th>
                                     <th>AVG</th>
                                     <th>OPS</th>
                                 </tr>
@@ -214,6 +215,7 @@
                                     <td>{{pt.description}}</td>
                                     <td>{{pt.plateappearances}}</td>
                                     <td>{{pt.atbats}}</td>
+                                    <td>{{pt.strikeouts}}</td>
                                     <td>{{pt.hits / pt.atbats | number:3}}</td>
                                     <td>{{((pt.onbases / pt.plateappearances) + (pt.bases / (pt.atbats + 0.000001))) | number:3}}</td>
                                 </tr>
@@ -221,10 +223,11 @@
                             <tfoot>
                                 <tr>
                                     <td>Totals</td>
-                                    <td>PA</td>
-                                    <td>AB</td>
-                                    <td>AVG</td>
-                                    <td>OPS</td>
+                                    <td>{{rctrl.pitchTypeTotals.plateappearances}}</td>
+                                    <td>{{rctrl.pitchTypeTotals.atbats}}</td>
+                                    <td>{{rctrl.pitchTypeTotals.strikeouts}}</td>
+                                    <td>{{rctrl.pitchTypeTotals.hits / rctrl.pitchTypeTotals.atbats | number:3}}</td>
+                                    <td>{{((rctrl.pitchTypeTotals.onbases / rctrl.pitchTypeTotals.plateappearances) + (rctrl.pitchTypeTotals.bases / (rctrl.pitchTypeTotals.atbats + 0.000001))) | number:3}}</td>
                                 </tr>
                             </tfoot>
                         </table>
