Bug fix - correct the Heat Zone link on the player detail page

--- a/public/views/player-detail.html
+++ b/public/views/player-detail.html
@@ -11,7 +11,7 @@
                 <ul>
                     <li ng-show="(',' + pctrl.player.positions + ',').indexOf(',C,') > -1"><i class="zmdi zmdi-info-outline"></i><a href="/#/reports/catcher-framing">Catcher Framing</a></li>
                     <li ng-show="(',' + pctrl.player.positions + ',').indexOf(',P,') > -1"><i class="zmdi zmdi-info-outline"></i><a href="/#/reports/velocity-diff">Velocity Difference</a></li>
-                    <li><i class="zmdi zmdi-info-outline"></i><a href="/#/reports/heat-zone/{{ pctrl.player.id }}">Heat Zone</a></li>
+                    <li><i class="zmdi zmdi-info-outline"></i><a href="/#/heat-zone/{{ pctrl.player.id }}">Heat Zone</a></li>
                 </ul>
             </div>
         </div>
